<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <TextView
        android:id="@+id/listheader"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="#333333"
        android:gravity="center_horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/device_data"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/v_nummer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_number"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/device_typ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_typ"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/device_subtyp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_subtype"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/data_typ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_datatype"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/bit_depth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_bitdepth"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_scale"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/min_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min_value"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/max_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_value"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cur_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cur_value"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/v_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/v_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/v_subtype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/v_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/v_datatype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/v_bitdepth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/v_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/v_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/v_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/v_cur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medium Text"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>