<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DeviceListActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvDeviceListHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#333333"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/device_data" />

        <TextView
            android:id="@+id/tvDeviceListName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genDefaultText" />

        <TextView
            android:id="@+id/tvDeviceListMAC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genDefaultText" />

        <TextView
            android:id="@+id/tvDeviceListBTClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genDefaultText" />

        <TextView
            android:id="@+id/tvDeviceListBondState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genDefaultText"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tvDeviceListListHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#333333"
            android:gravity="center_horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/connected_sensors"
            android:textColor="@android:color/white"
            android:textSize="18sp"/>

        <ListView
            android:id="@+id/lvDeviceListSensors"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
        </ListView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>